--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Forsíða</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab|Roboto:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab:400,700" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="styleguide.css">
     <link rel="stylesheet" href="grid.css">
@@ -75,65 +75,60 @@
       </section>
 
       <section>
-        <div class="cardlist">
-          <div class="cardlist__row">
+        <div class="row">
 
-            <div class="cardlist__col">
-              <div class="card">
-                <div class="card__content">
-                  <img src="img/profile1.jpg" class="card__img" alt="">
-                  <blockquote class="card__blockquote">
-                    „Ég get engan vegið hugsað mér lífið án þessarar þjónustu!“
-                  </blockquote>
-                  <p class="card__name">Anna Jóns</p>
-                  <p class="card__text">Áskrifandi í þrjá mánuði</p>
-                </div>
+          <div class="col col-4 col-sm-6 col-smm-12">
+            <div class="card">
+              <div class="card__content">
+                <img src="img/profile1.jpg" class="card__img" alt="">
+                <blockquote class="card__blockquote">
+                  „Ég get engan vegið hugsað mér lífið án þessarar þjónustu!“
+                </blockquote>
+                <p class="card__name">Anna Jóns</p>
+                <p class="card__text">Áskrifandi í þrjá mánuði</p>
               </div>
             </div>
-
-            <div class="cardlist__col">
-              <div class="card">
-                <div class="card__content">
-                  <img src="img/profile2.jpg" class="card__img" alt="">
-                  <blockquote class="card__blockquote">
-                    „Vá, þetta breytir öllu!“
-                  </blockquote>
-                  <p class="card__name">Siggi Páls</p>
-                  <p class="card__text">Áskrifandi í tvo daga</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="cardlist__col">
-              <div class="card">
-                <div class="card__content">
-                  <img src="img/profile3.jpg" class="card__img" alt="">
-                  <blockquote class="card__blockquote">
-                    „A+++, mun aldrei hætta í áskrift“
-                  </blockquote>
-                  <p class="card__name">Jón Guðrúnarson</p>
-                  <p class="card__text">Áskrifandi í ár</p>
-                </div>
-              </div>
-            </div>
-
           </div>
+
+          <div class="col col-4 col-sm-6 col-smm-12">
+            <div class="card">
+              <div class="card__content">
+                <img src="img/profile2.jpg" class="card__img" alt="">
+                <blockquote class="card__blockquote">
+                  „Vá, þetta breytir öllu!“
+                </blockquote>
+                <p class="card__name">Siggi Páls</p>
+                <p class="card__text">Áskrifandi í tvo daga</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col col-4 col-sm-6 col-smm-12">
+            <div class="card">
+              <div class="card__content">
+                <img src="img/profile3.jpg" class="card__img" alt="">
+                <blockquote class="card__blockquote">
+                  „A+++, mun aldrei hætta í áskrift“
+                </blockquote>
+                <p class="card__name">Jón Guðrúnarson</p>
+                <p class="card__text">Áskrifandi í ár</p>
+              </div>
+            </div>
+          </div>
+
         </div>
       </section>
 
       <section>
         <h3 class="heading heading--three">Eftir hverju ert þú að bíða?</h3>
-<<<<<<< HEAD
         <form class="button button--one" action="form.html">
           <input type="submit" value="Kaupa">
         </form>
-=======
         <div>
           <form  class = "container" action="form.html">
             <input class="button button--two" type="submit" value="Kaupa">
           </form>
         </div>
->>>>>>> 58bf20b80047b32a14781f8f77671619d287725c
       </section>
     </main>
     <footer>
