--- a/index.html
+++ b/index.html
@@ -81,48 +81,42 @@
 
           <div class="col col-4 col-sm-6 col-smm-12">
             <div class="card">
-              <div class = "card__image">
-                <img src="img/profile1.jpg" class="card__image__img" alt="">
-              </div>
-              <div class="card__content">
-                <blockquote class="card__content__blockquote">
+              <div class ="content">
+                <img src="img/profile1.jpg" class="card__img" alt="">
+                <blockquote class="card__blockquote">
                   „Ég get engan vegið hugsað mér lífið án þessarar þjónustu!“
                 </blockquote>
-                <p class="card__content__name">Anna Jóns</p>
-                <p class="card__content__text">Áskrifandi í þrjá mánuði</p>
+                <p class="card__name">Anna Jóns</p>
+                <p class="card__text">Áskrifandi í þrjá mánuði</p>
               </div>
             </div>
           </div>
 
-          <div class="col col-4 col-sm-6 col-smm-12">
-            <div class="card">
-              <div class = "card__image">
-                <img src="img/profile2.jpg" class="card__image__img" alt="">
-              </div>
-              <div class="card__content">
-                <blockquote class="card__content__blockquote__three">
-                  „Vá, þetta breytir öllu!“
-                </blockquote>
-                <p class="card__content__name">Siggi Páls</p>
-                <p class="card__content__text">Áskrifandi í tvo daga</p>
+            <div class="col col-4 col-sm-6 col-smm-12">
+              <div class="card">
+                <div class ="content">
+                  <img src="img/profile2.jpg" class="card__img" alt="">
+                  <blockquote class="card__blockquote">
+                    „Vá, þetta breytir öllu!“
+                  </blockquote>
+                  <p class="card__name">Siggi Páls</p>
+                  <p class="card__text">Áskrifandi í tvo daga</p>
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="col col-4 col-sm-6 col-smm-12">
-            <div class="card">
-              <div class = "card__image">
-                <img src="img/profile3.jpg" class="card__image__img" alt="">
+              <div class="col col-4 col-sm-6 col-smm-12">
+                <div class="card">
+                  <div class ="content">
+                    <img src="img/profile3.jpg" class="card__img" alt="">
+                    <blockquote class="card__blockquote">
+                      „A+++, mun aldrei hætta í áskrift“
+                    </blockquote>
+                    <p class="card__name">Jón Guðrúnarson</p>
+                    <p class="card__text">Áskrifandi í ár</p>
+                  </div>
+                </div>
               </div>
-              <div class="card__content">
-                <blockquote class="card__content__blockquote__three">
-                  „A+++, mun aldrei hætta í áskrift“
-                </blockquote>
-                <p class="card__content__name">Jón Guðrúnarson</p>
-                <p class="card__content__text">Áskrifandi í ár</p>
-              </div>
-            </div>
-          </div>
 
         </div>
       </section>
