--- a/index.html
+++ b/index.html
@@ -68,19 +68,15 @@
                 </div>
             </div>
           </div>
-
           <div class="col col-6 col-sm-12">
             <img src="img/image.jpg" alt="">
           </div>
-
         </div>
       </section>
-
       <section>
         <div class="row">
-
           <div class="col col-4 col-sm-6 col-smm-12">
-            <div class="card">
+            <div class="card card--one">
               <div class ="content">
                 <img src="img/profile1.jpg" class="card__img" alt="">
                 <blockquote class="card__blockquote">
@@ -91,36 +87,32 @@
               </div>
             </div>
           </div>
-
-            <div class="col col-4 col-sm-6 col-smm-12">
-              <div class="card">
-                <div class ="content">
-                  <img src="img/profile2.jpg" class="card__img" alt="">
-                  <blockquote class="card__blockquote">
-                    „Vá, þetta breytir öllu!“
-                  </blockquote>
-                  <p class="card__name">Siggi Páls</p>
-                  <p class="card__text">Áskrifandi í tvo daga</p>
-                </div>
+          <div class="col col-4 col-sm-6 col-smm-12">
+            <div class="card card--two">
+              <div class ="content">
+                <img src="img/profile2.jpg" class="card__img" alt="">
+                <blockquote class="card__blockquote">
+                  „Vá, þetta breytir öllu!“
+                </blockquote>
+                <p class="card__name">Siggi Páls</p>
+                <p class="card__text">Áskrifandi í tvo daga</p>
               </div>
             </div>
-
-              <div class="col col-4 col-sm-6 col-smm-12">
-                <div class="card">
-                  <div class ="content">
-                    <img src="img/profile3.jpg" class="card__img" alt="">
-                    <blockquote class="card__blockquote">
-                      „A+++, mun aldrei hætta í áskrift“
-                    </blockquote>
-                    <p class="card__name">Jón Guðrúnarson</p>
-                    <p class="card__text">Áskrifandi í ár</p>
-                  </div>
-                </div>
+          </div>
+          <div class="col col-4 col-sm-6 col-smm-12">
+            <div class="card card--three">
+              <div class ="content">
+                <img src="img/profile3.jpg" class="card__img" alt="">
+                <blockquote class="card__blockquote">
+                  „A+++, mun aldrei hætta í áskrift“
+                </blockquote>
+                <p class="card__name">Jón Guðrúnarson</p>
+                <p class="card__text">Áskrifandi í ár</p>
               </div>
-
+            </div>
+          </div>
         </div>
       </section>
-
       <section>
         <h3 class="heading heading--three">Eftir hverju ert þú að bíða?</h3>
         <div>
