--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
       <section>
         <div class="row">
 
-          <div class="col col-4 col-sm-6 col-smm-12">
+          <div class="col col-4 col-sm-6 col-xs-12">
             <div class="card">
-              <div class ="content">
+              <div class="card__content">
                 <img src="img/profile1.jpg" class="card__img" alt="">
                 <blockquote class="card__blockquote">
                   „Ég get engan vegið hugsað mér lífið án þessarar þjónustu!“
@@ -92,9 +92,9 @@
             </div>
           </div>
 
-            <div class="col col-4 col-sm-6 col-smm-12">
+            <div class="col col-4 col-sm-6 col-xs-12">
               <div class="card">
-                <div class ="content">
+                <div class="card__content">
                   <img src="img/profile2.jpg" class="card__img" alt="">
                   <blockquote class="card__blockquote">
                     „Vá, þetta breytir öllu!“
@@ -105,9 +105,9 @@
               </div>
             </div>
 
-              <div class="col col-4 col-sm-6 col-smm-12">
+              <div class="col col-4 col-sm-6 col-xs-12">
                 <div class="card">
-                  <div class ="content">
+                  <div class="card__content">
                     <img src="img/profile3.jpg" class="card__img" alt="">
                     <blockquote class="card__blockquote">
                       „A+++, mun aldrei hætta í áskrift“
