--- a/index.html
+++ b/index.html
@@ -38,34 +38,34 @@
         <div class="row">
 
           <div class="col col-6 col-sm-12">
-            <div class="item">
-              <img src="img/check.svg" class="item__img" alt="">
-                <div class="item__content">
-                  <h3 class="item__heading">Ódýr og góð þjónusta</h3>
-                    <p class="item__text">
-                      Gerir nákvæmlega það sem þú býst við. Ekki láta þessa frábæru nýjung framhjá þér fara.
-                    </p>
-                </div>
-            </div>
-
-            <div class="item">
-              <img src="img/check.svg" class="item__img" alt="">
-                <div class="item__content">
-                  <h3 class="item__heading">Þægilegt í amstri dagsins</h3>
-                    <p class="item__text">
-                      Eftir nokkra daga munt þú aldrei geta verið án Fooþjónustunnar.
-                    </p>
-                </div>
-            </div>
-
-            <div class="item">
-              <img src="img/check.svg" class="item__img" alt="">
-                <div class="item__content">
-                  <h3 class="item__heading">Nauðsynlegt á hvert heimili</h3>
-                    <p class="item__text">
-                      Hvort sem er fyrir einstaklinga eða stórfjölskyldur.
-                    </p>
-                </div>
+            <div class="list">
+              <div class="item">
+                <img src="img/check.svg" class="item__img" alt="">
+                  <div class="item__content">
+                    <h3 class="item__heading">Ódýr og góð þjónusta</h3>
+                      <p class="item__text">
+                        Gerir nákvæmlega það sem þú býst við. Ekki láta þessa frábæru nýjung framhjá þér fara.
+                      </p>
+                  </div>
+              </div>
+              <div class="item">
+                <img src="img/check.svg" class="item__img" alt="">
+                  <div class="item__content">
+                    <h3 class="item__heading">Þægilegt í amstri dagsins</h3>
+                      <p class="item__text">
+                        Eftir nokkra daga munt þú aldrei geta verið án Fooþjónustunnar.
+                      </p>
+                  </div>
+              </div>
+              <div class="item">
+                <img src="img/check.svg" class="item__img" alt="">
+                  <div class="item__content">
+                    <h3 class="item__heading">Nauðsynlegt á hvert heimili</h3>
+                      <p class="item__text">
+                        Hvort sem er fyrir einstaklinga eða stórfjölskyldur.
+                      </p>
+                  </div>
+              </div>
             </div>
           </div>
           <div class="col col-6 col-sm-12">
