--- a/form.html
+++ b/form.html
@@ -131,10 +131,21 @@
     <button class="button button--one">Panta</button>
   </div>
 </body>
-<footer>
-  <p>Foothjonustan</p>
-  <p>123-4567</p>
-  <p>Opid 12-13 alla daga</p>
-  <p>Bargata 1</p>
-  <p>900 Foobar</p>
-</footer>
+<div class="col col-12 col-sm-12 col-smm-12">
+ <footer class="footer">
+   <div class="footer__content">
+     <div class="footer__row">
+       <div class="footer__col">
+         <p>Fooþjónustan</p>
+         <p>123-4567</p>
+       </div>
+       <div class="footer__col">
+         <p>Opið 12-13 alla daga</p>
+         <p>Bargata 1</p>
+         <p>900 Foobar</p>
+       </div>
+     </div>
+      <p class="footer__copyright">© Fooþjónustan 2017</p>
+    </div>
+  </footer>
+</div>
