--- a/um.html
+++ b/um.html
@@ -51,11 +51,21 @@
       </div>
     </main>
   </body>
-
-<footer class = "footer">
-  <p class = "text"> Foothjonustan </p>
-  <p class = "text"> 123-4567 </p>
-  <p class = "text"> Opid 12-13 alla daga </p>
-  <p class = "text"> Bargata 1 </p>
-  <p class = "text"> 900 Foobar </p>
-</footer>
+  <div class="col col-12 col-sm-12 col-smm-12">
+   <footer class="footer">
+     <div class="footer__content">
+       <div class="footer__row">
+         <div class="footer__col">
+           <p>Fooþjónustan</p>
+           <p>123-4567</p>
+         </div>
+         <div class="footer__col">
+           <p>Opið 12-13 alla daga</p>
+           <p>Bargata 1</p>
+           <p>900 Foobar</p>
+         </div>
+       </div>
+        <p class="footer__copyright">© Fooþjónustan 2017</p>
+      </div>
+    </footer>
+  </div>
