--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="grid" lang="is">
   <head>
     <meta charset="utf-8">
-    <title>Forsíða</title>
+      <title>Forsíða</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab:400,700" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="styleguide.css">
@@ -36,7 +36,6 @@
     <main>
       <section>
         <div class="row">
-
           <div class="col col-6 col-sm-12">
             <div class="item">
               <img src="img/check.svg" class="item__img" alt="">
@@ -67,10 +66,10 @@
                     </p>
                 </div>
             </div>
-          </div>
-          <div class="col col-6 col-sm-12">
-            <img src="img/image.jpg" alt="">
-          </div>
+            </div>
+            <div class="col col-6 col-sm-12">
+              <img src="img/image.jpg" alt="">
+            </div>
         </div>
       </section>
       <section>
@@ -127,7 +126,7 @@
         </div>
       </section>
     </main>
-
+    <div class="row">
       <div class="col col-12 col-sm-12 col-smm-12">
        <footer class="footer">
          <div class="footer__content">
@@ -146,6 +145,6 @@
           </div>
         </footer>
       </div>
-    
+    </div>
   </body>
 </html>
