--- a/um.html
+++ b/um.html
@@ -37,7 +37,7 @@
               </p>
               <blockquote class="blockquote">
                 <p class="blockquote--one"> „Aenean in purus vel leo pellentesque lacinia non ut magna. Sed eleifend tristique mollis.“</p>
-                <p class="blockquote--one"> — Foobarius Baz</p>
+                <p class="blockquote--two"> — Foobarius Baz</p>
               </blockquote>
               <p class="text__p">
                 Donec efficitur ante scelerisque metus tempus aliquam. Etiam sit amet justo vulputate, ultricies ligula non, fringilla sapien. Mauris ut neque nec dui ullamcorper vulputate. Ut at suscipit est. Cras elementum tellus erat, quis dictum tellus efficitur quis. Sed mollis fermentum massa, hendrerit vehicula nunc hendrerit sit amet. Donec vestibulum tortor nec enim lobortis placerat. Quisque faucibus volutpat consectetur. Nunc sed ipsum egestas, semper massa non, consequat felis. Nam pellentesque sapien ipsum, et malesuada mi ultricies in. Donec consequat mattis consequat. Maecenas efficitur vehicula ultrices.
@@ -48,22 +48,25 @@
         </div>
       </div>
     </main>
-  </body>
-  <div class="col col-12 col-sm-12 col-smm-12">
-    <footer class="footer">
-      <div class="footer__content">
-        <div class="footer__row">
-          <div class="footer__col">
-            <p>Fooþjónustan</p>
-            <p>123-4567</p>
+    <div class="row">
+      <div class="col col-12 col-sm-12 col-smm-12">
+       <footer class="footer">
+         <div class="footer__content">
+           <div class="footer__row">
+             <div class="footer__col">
+               <p>Fooþjónustan</p>
+               <p>123-4567</p>
+             </div>
+             <div class="footer__col">
+               <p>Opið 12-13 alla daga</p>
+               <p>Bargata 1</p>
+               <p>900 Foobar</p>
+             </div>
+           </div>
+            <p class="footer__copyright">© Fooþjónustan 2017</p>
           </div>
-          <div class="footer__col">
-            <p>Opið 12-13 alla daga</p>
-            <p>Bargata 1</p>
-            <p>900 Foobar</p>
-          </div>
-        </div>
-        <p class="footer__copyright">© Fooþjónustan 2017</p>
+        </footer>
       </div>
-    </footer>
-  </div>
+    </div>
+  </body>
+</html>
