--- a/um.html
+++ b/um.html
@@ -2,6 +2,7 @@
 <html class="grid" lang="is">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width" />
       <title>Um</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab:400,700" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
